force-app/main/default/objects/Requirement_Reporting_Detail__c/Requirement_Reporting_Detail__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store the Partner response for a list of questions.</description>
    <label>Requirement Reporting Detail</label>
    <nameField>
        <label>Requirement Reporting Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Reporting Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>