force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/BD_board_vacancies__c.field-meta.xml
<CustomField>
    <fullName>BD_board_vacancies__c</fullName>
    <label>Number of vacant board seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>