force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/BD_reach_target__c.field-meta.xml
<CustomField>
    <fullName>BD_reach_target__c</fullName>
    <label>What assistance required</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>