force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/BD_Target_Met__c.field-meta.xml
<CustomField>
    <fullName>BD_Target_Met__c</fullName>
    <description>Set up for one off reporting in response to Delta work simplification</description>
    <label>BD_Target_Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>