force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/BD_total_board_members__c.field-meta.xml
<CustomField>
    <fullName>BD_total_board_members__c</fullName>
    <formula>BD_Total_female__c +  BD_Total_male__c +  BD_Total_gender_diverse__c +  BD_board_vacancies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total number of board members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>