force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/BD_Total_female__c.field-meta.xml
<CustomField>
    <fullName>BD_Total_female__c</fullName>
    <label>Number of self-identified women</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>