force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/BD_Total_gender_diverse__c.field-meta.xml
<CustomField>
    <fullName>BD_Total_gender_diverse__c</fullName>
    <inlineHelpText>Gender diverse means the person does not identify as male or female.</inlineHelpText>
    <label>Number of gender diverse board members</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>