force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Case_study_name__c.field-meta.xml
<CustomField>
    <fullName>Case_study_name__c</fullName>
    <description>This field will store the case study name for record type &apos;CS Case Study&apos;</description>
    <label>Case Study Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>