force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Female_Managers__c.field-meta.xml
<CustomField>
    <fullName>Female_Managers__c</fullName>
    <inlineHelpText>Enter the number of managers who identify as female that have manager in their job title.</inlineHelpText>
    <label>Number of Female Managers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>