force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Gender_Diverse_Managers__c.field-meta.xml
<CustomField>
    <fullName>Gender_Diverse_Managers__c</fullName>
    <inlineHelpText>Enter the number of managers who don&apos;t identify as male or female, and have manager in their job title</inlineHelpText>
    <label>Number of Gender Diverse Managers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>