force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Gender_of_your_Board_Chair__c.field-meta.xml
<CustomField>
    <fullName>Gender_of_your_Board_Chair__c</fullName>
    <label>Gender of your Board Chair</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gender Diverse</fullName>
            </value>
            <value>
                <fullName>Self-identified woman</fullName>
            </value>
            <value>
                <fullName>Self-identified man</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>