force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Gender_of_your_CEO__c.field-meta.xml
<CustomField>
    <fullName>Gender_of_your_CEO__c</fullName>
    <inlineHelpText>Gender diverse means the person does not identify as male or female</inlineHelpText>
    <label>Gender of your CEO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gender Diverse</fullName>
            </value>
            <value>
                <fullName>Woman</fullName>
                <label>Self-identified woman</label>
            </value>
            <value>
                <fullName>Man</fullName>
                <label>Self-identified man</label>
            </value>
            <value>
                <fullName>Men</fullName>
                <isActive>false</isActive>
                <label>Men</label>
            </value>
            <value>
                <fullName>Women</fullName>
                <isActive>false</isActive>
                <label>Women</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>