force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/How_much_did_you_do__c.field-meta.xml
<CustomField>
    <fullName>How_much_did_you_do__c</fullName>
    <inlineHelpText>Please provide a brief, high-level description of the key activities you undertook and the outputs you produced over the past 12 months that contributed towards the outcomes you set out to achieve.</inlineHelpText>
    <label>What did you do?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>