force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/How_well_did_you_do_it__c.field-meta.xml
<CustomField>
    <fullName>How_well_did_you_do_it__c</fullName>
    <inlineHelpText>Please provide a clear and concise description of how well you implemented (planned, delivered and monitored) your activities, considering the outcomes you set out to achieve.
 
Use evidence (quantitative and qualitative, in alignment to the outcome measures you stated in your initiative plan) to show how you implemented your activities and the level of satisfaction either internally or from your stakeholders.</inlineHelpText>
    <label>How well did you do it?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>