force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/How_Well_Final_Rating__c.field-meta.xml
<CustomField>
    <fullName>How_Well_Final_Rating__c</fullName>
    <description>This field will store the Final Rating for How well did you do it? field</description>
    <label>How well did you do it Final Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>