force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/HowMuch_ReviewComments__c.field-meta.xml
<CustomField>
    <fullName>HowMuch_ReviewComments__c</fullName>
    <description>This field will be used to store comments for Rating of How much did you do? fields</description>
    <label>How much did you do Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>