force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/HowWell_ReviewComment__c.field-meta.xml
<CustomField>
    <fullName>HowWell_ReviewComment__c</fullName>
    <description>This field will be used to store comments for Rating of &quot;How well did you do it?&quot; fields.</description>
    <label>How well did you do it Review Rating</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>