force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Male_Managers__c.field-meta.xml
<CustomField>
    <fullName>Male_Managers__c</fullName>
    <inlineHelpText>Enter the number of managers who identify as male, who have manager in their job title</inlineHelpText>
    <label>Number of Male Managers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>