force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Notes_for_Partner_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Partner_Meeting__c</fullName>
    <label>Notes for Partner Meeting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>