force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Organisation_ID__c.field-meta.xml
<CustomField>
    <fullName>Organisation_ID__c</fullName>
    <formula>Requirement__r.Partner__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation ID</label>
    <type>Text</type>
</CustomField>