force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Organisation_PC__c.field-meta.xml
<CustomField>
    <fullName>Organisation_PC__c</fullName>
    <formula>Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation - PC</label>
    <type>Text</type>
</CustomField>