force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the Organisation same as of associated Requirement Organisation</description>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requirement Reporting Details</relationshipLabel>
    <relationshipName>Requirement_Reporting_Details</relationshipName>
    <type>Lookup</type>
</CustomField>