force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Quality_of_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Evidence__c</fullName>
    <description>This field will store the Quality of Evidence value</description>
    <label>Quality of Evidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>