force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Requirement Reporting Details</relationshipLabel>
    <relationshipName>Requirement_Reporting_Details</relationshipName>
    <type>Lookup</type>
</CustomField>