force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Requirement_Initiative_PC__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Initiative_PC__c</fullName>
    <formula>Requirement__r.Initiative__r.Name</formula>
    <label>Requirement: Initiative - PC</label>
    <type>Text</type>
</CustomField>