force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Requirement_Reporting_Detail_ID__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Reporting_Detail_ID__c</fullName>
    <description>This field will store unique ID of each record</description>
    <displayFormat>RR{000000}</displayFormat>
    <label>Requirement Reporting Detail ID</label>
    <type>AutoNumber</type>
</CustomField>