force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Requirement_Reporting_Detail_Name_PC__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Reporting_Detail_Name_PC__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Reporting Detail Name - PC</label>
    <type>Text</type>
</CustomField>