force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Requirement_Status__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Status__c</fullName>
    <description>This field will store the status of the associated Requirement</description>
    <label>Requirement Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>