force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Self_review_rating__c.field-meta.xml
<CustomField>
    <fullName>Self_review_rating__c</fullName>
    <label>Self review rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Established</fullName>
            </value>
            <value>
                <fullName>Emerging</fullName>
            </value>
            <value>
                <fullName>Consolidating</fullName>
            </value>
            <value>
                <fullName>Highly Developed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>