force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Being Reviewed</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>SME review underway</fullName>
            </value>
            <value>
                <fullName>SME review complete</fullName>
            </value>
            <value>
                <fullName>Review being finalised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>