force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Value_of_Auckland__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Auckland__c</fullName>
    <inlineHelpText>Amount, in dollars, that was invested in Auckland. Please enter a number without symbols. E,g. if $4,500 was invested in Auckland, please enter 4500</inlineHelpText>
    <label>Value of Auckland</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>