force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/Value_of_Young_People__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Young_People__c</fullName>
    <inlineHelpText>Amount, in dollars, that was invested in children and young people. Please enter a number without symbols. E,g. if $4,500 was invested in children and young people, please enter 4500</inlineHelpText>
    <label>Value of Young People</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>