force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/ValueYoung_ReviewComment__c.field-meta.xml
<CustomField>
    <fullName>ValueYoung_ReviewComment__c</fullName>
    <description>This field will be used to store comments for Rating of &quot;Value of Young People&quot; fields</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>