force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/What_are_you_learning_2__c.field-meta.xml
<CustomField>
    <fullName>What_are_you_learning_2__c</fullName>
    <label>What are you learning?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>