force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/What_impact_did_this_have__c.field-meta.xml
<CustomField>
    <fullName>What_impact_did_this_have__c</fullName>
    <inlineHelpText>Please demonstrate the change and impact this initiative has had towards the outcomes you set out to achieve. 
 
Use evidence (quantitative and qualitative, in alignment to the outcome measures you stated in your initiative plan) to show what change have you observed as a result of implementing, the activities and outputs, and how you know that this change has occurred.</inlineHelpText>
    <label>What impact did this have?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>