force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/What_impact_Final_Rating__c.field-meta.xml
<CustomField>
    <fullName>What_impact_Final_Rating__c</fullName>
    <description>This field will store the Final Rating for the &quot;What impact did this have?&quot; field.</description>
    <label>What impact did this have Final Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>