force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/What_impact_is_this_having_2__c.field-meta.xml
<CustomField>
    <fullName>What_impact_is_this_having_2__c</fullName>
    <label>What impact is this having?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>