force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/What_were_your_learnings__c.field-meta.xml
<CustomField>
    <fullName>What_were_your_learnings__c</fullName>
    <inlineHelpText>Please provide a clear and concise description of the lessons you have learnt over the past 12 months, and how are you planning to apply these moving forward. 
 
In your answer, consider how the information you have collected will help you work towards the outcomes you are targeting.</inlineHelpText>
    <label>What did you learn?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>