force-app/main/default/objects/Requirement_Reporting_Detail__c/fields/WhatImpact_ReviewComment__c.field-meta.xml
<CustomField>
    <fullName>WhatImpact_ReviewComment__c</fullName>
    <description>This field will be used to store comments for Rating of &quot;What impact did this have?&quot; fields</description>
    <label>What impact did this have Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>