force-app/main/default/objects/Requirement_Reporting_Detail__c/recordTypes/CS_Board_Diversity.recordType-meta.xml
<RecordType>
    <fullName>CS_Board_Diversity</fullName>
    <active>true</active>
    <description>This record type is for annual reporting of 2019</description>
    <label>CS Board Diversity</label>
</RecordType>