force-app/main/default/objects/Requirement_Reporting_Detail__c/recordTypes/CS_Board_Diversity_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>CS_Board_Diversity_Read_Only</fullName>
    <active>true</active>
    <description>This record type is the read only version of CS Board Diversity</description>
    <label>CS Board Diversity Read Only</label>
</RecordType>