force-app/main/default/objects/Requirement_Reporting_Detail__c/recordTypes/CS_Case_Study.recordType-meta.xml
<RecordType>
    <fullName>CS_Case_Study</fullName>
    <active>true</active>
    <description>This record type is for annual reporting of 2019</description>
    <label>CS Case Study</label>
</RecordType>